certfication section added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
         <h1>Vineet Kumar</h1>
         <div class="contact-info">
-            <span>Mobile: (+1) 437-428-2199 , (+91) 991-162-0414</span>
             <span>Email: contactkrvineet@gmail.com</span>
         </div>
         <nav>
@@ -22,9 +21,12 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#expertise">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="#certifications">Certifications</a></li>
             </ul>
         </nav>
     </header>
+
+    <button class="blog-button" onclick="location.href='blog.html'">Blog</button>
 
     <section id="about">
         <h2>About Me</h2>
@@ -35,7 +37,7 @@
             inception to delivery, by employing agile methodologies and continuous integration/continuous deployment
             (CI/CD) practices. My ability to streamline testing processes and implement cutting-edge technologies has
             consistently resulted in reduced time-to-market and enhanced product quality.</p>
-        <button class="blog-button" onclick="location.href='blog.html'">Blog</button>
+
     </section>
 
     <section id="expertise">
