--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#expertise">Skills</a></li>
+                <li><a href="#expertise">Technical Expertise</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#certifications">Certifications</a></li>
             </ul>
@@ -37,12 +37,30 @@
             inception to delivery, by employing agile methodologies and continuous integration/continuous deployment
             (CI/CD) practices. My ability to streamline testing processes and implement cutting-edge technologies has
             consistently resulted in reduced time-to-market and enhanced product quality.</p>
+        <p>As an SDET Manager, I have successfully led multiple projects across diverse domains, including finance,
+            healthcare, e-commerce, and enterprise applications.</p>
+        <ul>
+            <li>Leading and mentoring a team of talented SDETs and QA engineers.</li>
+            <li>Architecting and implementing scalable test automation frameworks.</li>
+            <li>Collaborating with cross-functional teams to integrate testing into the CI/CD pipeline.</li>
+            <li>Conducting code reviews and providing technical guidance to ensure best practices.</li>
+            <li>Driving the adoption of new tools and technologies to enhance testing efficiency.</li>
+            <li>Identifying and mitigating risks throughout the software development lifecycle.</li>
+        </ul>
 
     </section>
 
     <section id="expertise">
-        <h2>Technical Skills</h2>
-        <p>Details about your technical skills and expertise.</p>
+        <h2>Technical Expertise</h2>
+        <p><strong>Languages:</strong> Java, JavaScript</p>
+        <p><strong>Automation Tools:</strong> Selenium, Appium, Cucumber, TestNG, JUnit</p>
+        <p><strong>Performance Tools:</strong> Gatlin, Jmeter</p>
+        <p><strong>DataWareHouse Tools:</strong> Snowflake, MongoDb</p>
+        <p><strong>CI/CD:</strong> Jenkins, Git, Docker, Kubernetes</p>
+        <p><strong>Cloud Platforms:</strong> AWS, Azure</p>
+        <p><strong>Testing Techniques:</strong> Functional, Regression, Performance, Load, Security</p>
+        <p><strong>Development Methodologies:</strong> Agile, Scrum, DevOps</p>
+        <p><strong>CRM:</strong> Salesforce</p>
     </section>
 
     <section id="projects">
