--- a/index.html
+++ b/index.html
@@ -13,97 +13,58 @@
 
         <h1>Vineet Kumar</h1>
         <div class="contact-info">
-            <span>Email: contactkrvineet@gmail.com</span>
+            <span>SDET Manager (Full Stack)</span><br>
+            <span>contactkrvineet@gmail.com</span><br>
+            <span><button class="blog-button" onclick="location.href='blog.html'"> Blogs & Book
+                </button></span>
+
         </div>
         <nav>
             <ul>
-                <li><a href="#about">About Me</a></li>
+                <li><a href="#home"></a></li>
+                <li><a href="about.html">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#expertise">Technical Expertise</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#certifications">Certifications</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+
     </header>
 
-    <button class="blog-button" onclick="location.href='blog.html'">Blog</button>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hello! I am Vineet, over 14 years of experience as a Software Development Engineer in Test (SDET) Manager
-            with a proven track record of delivering high-quality software products. My career has been defined by a
-            commitment to excellence, a passion for innovative solutions, and a relentless drive to optimize the
-            software development lifecycle.Throughout my career, I have successfully managed multiple projects, from
-            inception to delivery, by employing agile methodologies and continuous integration/continuous deployment
-            (CI/CD) practices. My ability to streamline testing processes and implement cutting-edge technologies has
-            consistently resulted in reduced time-to-market and enhanced product quality.</p>
-        <p>As an SDET Manager, I have successfully led multiple projects across diverse domains, including finance,
-            healthcare, e-commerce, and enterprise applications.</p>
-        <ul>
-            <li>Leading and mentoring a team of talented SDETs and QA engineers.</li>
-            <li>Architecting and implementing scalable test automation frameworks.</li>
-            <li>Collaborating with cross-functional teams to integrate testing into the CI/CD pipeline.</li>
-            <li>Conducting code reviews and providing technical guidance to ensure best practices.</li>
-            <li>Driving the adoption of new tools and technologies to enhance testing efficiency.</li>
-            <li>Identifying and mitigating risks throughout the software development lifecycle.</li>
-        </ul>
-
-    </section>
-
-    <section id="expertise">
-        <h2>Technical Expertise</h2>
-        <p><strong>Languages:</strong> Java, JavaScript</p>
-        <p><strong>Automation Tools:</strong> Selenium, Appium, Cucumber, TestNG, JUnit</p>
-        <p><strong>Performance Tools:</strong> Gatlin, Jmeter</p>
-        <p><strong>DataWareHouse Tools:</strong> Snowflake, MongoDb</p>
-        <p><strong>CI/CD:</strong> Jenkins, Git, Docker, Kubernetes</p>
-        <p><strong>Cloud Platforms:</strong> AWS, Azure</p>
-        <p><strong>Testing Techniques:</strong> Functional, Regression, Performance, Load, Security</p>
-        <p><strong>Development Methodologies:</strong> Agile, Scrum, DevOps</p>
-        <p><strong>CRM:</strong> Salesforce</p>
-    </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Project One</h3>
-            <p>Description of the first project.</p>
+            <h3><strong>Rest Assured Framework for API Validations</strong></h3>
+
+            <p>This framework is created for Any person want to use Rest Assured to validate all Api and
+                graphql use cases
+                used in their project . </p>
+            <p>Technologies Used : Java , Rest Assured , BDD,Maven </p>
+            <p>Github Url : https://github.com/contactkrvineet/Rest-Assured</p>
         </div>
         <div class="project">
-            <h3>Project Two</h3>
-            <p>Description of the second project.</p>
+            <h3>UI Automation Framework</h3>
+            <p>This Framework is created for UI Test Use Cases </p>
+            <p>Technology Used : Java , Selenium . BDD ,Maven</p>
+            <p>Github Url : https://github.com/contactkrvineet/vineetkr.com /p>
         </div>
         <div class="project">
-            <h3>Project Three</h3>
-            <p>Description of the second project.</p>
+            <h3>Performance Framework</h3>
+            <p>This Framework can measure performance of any API </p>
+            <p>Technology Used : Java , Gradle . BDD ,TestNg,Gatlin</p>
+            <p>Github Url : https://github.com/contactkrvineet/perfTest/p>
         </div>
         <div class="project">
-            <h3>Project Four</h3>
-            <p>Description of the second project.</p>
+            <h3>Shopping Cart</h3>
+            <p>This framework is created for any one who want to create as small shopping cart Framework </p>
+            <p>Comming Soon -Development in progress</p>
+            <p>Technology Used : React , JavaScript . Html, CSS</p>
+            <p></p>
         </div>
-        <div class="project">
-            <h3>Project Five</h3>
-            <p>Description of the second project.</p>
-        </div>
+
     </section>
 
-
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <form id="contact-form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-
-            <button type="submit">Send</button>
-        </form>
-    </section>
 
     <footer>
         <p>&copy; 2024 Vineet Kumar</p>
