--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="contact-info">
             <span>SDET Manager (Full Stack)</span><br>
             <span>contactkrvineet@gmail.com</span><br>
-            <span><button class="blog-button" onclick="location.href='blog.html'"> Blogs & Book
+            <span><button class="blog-button" onclick="location.href='blog.html'"> Books and Blogs
                 </button></span>
 
         </div>
@@ -25,6 +25,7 @@
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
+
             </ul>
         </nav>
 
@@ -40,29 +41,54 @@
             <p>This framework is created for Any person want to use Rest Assured to validate all Api and
                 graphql use cases
                 used in their project . </p>
-            <p>Technologies Used : Java , Rest Assured , BDD,Maven </p>
-            <p>Github Url : https://github.com/contactkrvineet/Rest-Assured</p>
+            <p><i>Technology Used :</i> Java , Rest Assured , BDD,Maven </p>
+            <p>Github Url : https://github.com/contactkrvineet/Rest-Assured
+
+            </p>
+            <p> <button class="read-more-button" onclick="window.location.href='blog.html'">Read
+                    More</button></p>
+
         </div>
         <div class="project">
             <h3>UI Automation Framework</h3>
             <p>This Framework is created for UI Test Use Cases </p>
-            <p>Technology Used : Java , Selenium . BDD ,Maven</p>
-            <p>Github Url : https://github.com/contactkrvineet/vineetkr.com /p>
+            <p><i>Technology Used :</i>Java , Selenium . BDD ,Maven</p>
+            <p>Github Url : https://github.com/contactkrvineet/vineetkr.com </p>
+            <p> <button class="read-more-button" onclick="window.location.href='blog.html'">Read
+                    More</button></p>
         </div>
         <div class="project">
             <h3>Performance Framework</h3>
             <p>This Framework can measure performance of any API </p>
-            <p>Technology Used : Java , Gradle . BDD ,TestNg,Gatlin</p>
-            <p>Github Url : https://github.com/contactkrvineet/perfTest/p>
+            <p><i>Technology Used :</i> Java , Gradle . BDD ,TestNg, Gatlin</p>
+            <p>Github Url : https://github.com/contactkrvineet/perfTest</p>
+            <p> <button class="read-more-button" onclick="window.location.href='blog.html'">Read
+                    More</button></p>
         </div>
         <div class="project">
             <h3>Shopping Cart</h3>
-            <p>This framework is created for any one who want to create as small shopping cart Framework </p>
+            <p>This framework is created for any one who want to create a small shopping cart Framework </p>
             <p>Comming Soon -Development in progress</p>
-            <p>Technology Used : React , JavaScript . Html, CSS</p>
+            <p><i>Technology Used :</i>React , JavaScript ,Node.js . Express , Axios</p>
+            <p> <button class="read-more-button" onclick="window.location.href='blog.html'">Read
+                    More</button></p>
+        </div>
+        <div class="project">
+            <h3>Mobile Framework </h3>
+            <p>This framework is created for any one who want to create Mobile Framework </p>
+            <p><i>Technology Used :</i>Selenium , Java , Appium , Xcode </p>
+            <p> <button class="read-more-button" onclick="window.location.href='blog.html'">Read
+                    More</button></p>
+        </div>
+        <div class="project">
+            <h3>QR Code Generator </h3>
+            <p>This framework is created for any one who want to create Mobile Framework </p>
+            <p><i>Technology Used :</i>Selenium , Java , Appium , Xcode </p>
+            <p> <button class="read-more-button" onclick="window.location.href='blog.html'">Read
+                    More</button></p>
+            <p></p>
             <p></p>
         </div>
-
     </section>
 
 
