--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="techExpertise.html">Technical Expertise</a></li>
+                <li><a href="#expertise">Technical Expertise</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#certifications">Certifications</a></li>
             </ul>
