--- a/index.html
+++ b/index.html
@@ -13,24 +13,26 @@
 
         <h1>Vineet Kumar</h1>
         <div class="contact-info">
-            <span>SDET Manager (Full Stack)</span><br>
+            <span>Full Stack SDET (QE Manager)</span><br>
             <span>contactkrvineet@gmail.com</span><br>
-            <span><button class="blog-button" onclick="location.href='blog.html'"> Books and Blogs
-                </button></span>
-
         </div>
-        <nav>
-            <ul>
-                <li><a href="#home"></a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
 
-            </ul>
-        </nav>
+        <div class="button-container">
+            <button class="blog-button" onclick="location.href='blog.html'">Blogs</button>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <button class="blog-button" onclick="location.href='book.html'">Books</button>
+        </div>
+
+
 
     </header>
-
 
 
     <section id="projects">
@@ -45,7 +47,7 @@
             <p>Github Url : https://github.com/contactkrvineet/Rest-Assured
 
             </p>
-            <p> <button class="read-more-button" onclick="window.location.href='blog.html'">Read
+            <p> <button class="read-more-button" onclick="window.location.href='restAssured.html'">Read
                     More</button></p>
 
         </div>
