--- a/about.html
+++ b/about.html
@@ -25,20 +25,22 @@
             </ul>
         </nav>
     </header>
-    <button class="blog-button" onclick="location.href='blog.html'">Blog</button>
+
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I am Vineet, over 14 years of experience as a Software Development Engineer in Test (SDET) Manager
+        <p> Hello! I am Vineet, over 14 years of experience as a Software Development Engineer in Test (SDET) Manager
             with a proven track record of delivering high-quality software products. My career has been defined by a
             commitment to excellence, a passion for innovative solutions, and a relentless drive to optimize the
             software development lifecycle.Throughout my career, I have successfully managed multiple projects, from
             inception to delivery, by employing agile methodologies and continuous integration/continuous deployment
             (CI/CD) practices. My ability to streamline testing processes and implement cutting-edge technologies has
             consistently resulted in reduced time-to-market and enhanced product quality.</p>
-        <p>As an SDET Manager, I have successfully led multiple projects from scratch across diverse domains, including
-            finance,
-            healthcare, e-commerce, and enterprise applications.</p>
+        <p></p>
+        <p> As an SDET Manager, I have successfully led multiple projects from scratch across diverse domains,
+            including finance,healthcare, e-commerce, and enterprise applications.</p>
+
+        <p>Some of my Roles and Responsibiliies includes : </p>
         <ul>
             <li>Leading and mentoring a team of talented SDETs and QA engineers.</li>
             <li>Architecting and implementing scalable test automation frameworks.</li>
@@ -48,27 +50,93 @@
             <li>Identifying and mitigating risks throughout the software development lifecycle.</li>
         </ul>
 
+        <p>Scroll below to look at my technical Expertise .</p>
+    </section>
+
+    <section id="expertise">
+        <h2>My Technical Expertise</h2>
+        <table>
+            <tr>
+                <th style="height:70%">
+                    <p style="color:black">Category</p>
+                </th>
+                <th style="height:70%">
+                    <p style="color:black">Technologies</p>
+                </th>
+
+            </tr>
+            <tr>
+                <td>Languages</td>
+                <td>Java, JavaScript</td>
+            </tr>
+            <tr>
+                <td>Automation Tools</td>
+                <td>Selenium, Appium, Cucumber, TestNG, JUnit, Rest Assured , Postman ,Swagger</td>
+            </tr>
+            <tr>
+                <td>Performance Tools</td>
+                <td>Gatlin, Jmeter</td>
+            </tr>
+            <tr>
+                <td>Data Warehouse Tools</td>
+                <td>Snowflake, MongoDb</td>
+            </tr>
+            <tr>
+                <td>CI/CD</td>
+                <td>Jenkins, Git, Docker, Kubernetes</td>
+            </tr>
+            <tr>
+                <td>Cloud Platforms</td>
+                <td>AWS, Azure</td>
+            </tr>
+            <tr>
+                <td>Testing Techniques</td>
+                <td>Functional, Regression, Performance, Load, Security</td>
+            </tr>
+            <tr>
+                <td>Development Methodologies</td>
+                <td>Agile, Scrum</td>
+            </tr>
+            <tr>
+                <td>CRM</td>
+                <td>Salesforce</td>
+            </tr>
+            <tr>
+                <td>Build Tools</td>
+                <td>Maven, Gradle</td>
+            </tr>
+        </table>
     </section>
     <section id="expertise">
-        <h2>Technical Expertise</h2>
-        <p><strong>Languages:</strong> Java, JavaScript</p>
-        <p><strong>Automation Tools:</strong> Selenium, Appium, Cucumber, TestNG, JUnit,Rest Assured</p>
-        <p><strong>Performance Tools:</strong> Gatlin, Jmeter</p>
-        <p><strong>DataWareHouse Tools:</strong> Snowflake, MongoDb</p>
-        <p><strong>CI/CD:</strong> Jenkins, Git, Docker, Kubernetes</p>
-        <p><strong>Cloud Platforms:</strong> AWS, Azure</p>
-        <p><strong>Testing Techniques:</strong> Functional, Regression, Performance, Load, Security</p>
-        <p><strong>Development Methodologies:</strong> Agile, Scrum</p>
-        <p><strong>CRM:</strong> Salesforce</p>
-        <p><strong>Build tools</strong> Maven , Gradle</p>
-        <h2>Currently Learning </h2>
-        <p><strong>Python</p>
-        <p><strong>Generative AI Beginners</p>
+        <h2>Currently Learning Technologies</h2>
+        <table>
+            <tr>
+                <th>
+                    <p style="color:black">Category</p>
+                </th>
+                <th>
+                    <p style="color:black">Technologies</p>
+                </th>
+
+            </tr>
+            <tr>
+                <td>Languages</td>
+                <td>Python , React JS</td>
+            </tr>
+            <tr>
+                <td>Automation Tools</td>
+                <td>Cypress</td>
+            </tr>
+
+            <tr>
+                <td>AI</td>
+                <td>Generative AI Prompt</td>
+            </tr>
+
+
+        </table>
+
     </section>
-    <div class="container">
-        <h2>Stay Tuned!</h2>
-        <p>We are working hard to bring you something amazing. Check back soon for updates.</p>
-    </div>
     <footer>
         <p>&copy; 2024 Vineet Kumar</p>
         <div class="social-links">
