--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
 
         <div class="button-container">
+
             <button class="blog-button" onclick="location.href='blog.html'">Blogs</button>
             <nav>
                 <ul class="nav-links">
@@ -35,19 +36,37 @@
     </header>
 
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3><strong>Rest Assured Framework for API Validations</strong></h3>
+    <section id="">
+        <div>
 
-            <p>This framework is created for Any person want to use Rest Assured to validate all Api and
-                graphql use cases
-                used in their project . </p>
-            <p><i>Technology Used :</i> Java , Rest Assured , BDD,Maven </p>
-            <p>Github Url : https://github.com/contactkrvineet/Rest-Assured
+            <p><i><strong>Knowledge becomes truly powerful when we share what we know. Shared knowledge multiplies the
+                        power it
+                        holds.</strong></i> </p>
+            <p>Below, I'm sharing some of the libraries I've created, aiming to contribute
+                to and strengthen the
+                SDET community. If they prove helpful in any way, it would be my pleasure .</p>
+            <p><a href="contact.html" style="color:white"><strong>Click Here and Scan</strong></a> to contribute to
+                Existing Libraries .
+            </p>
+
+        </div>
+    </section>
+
+    <section id="projects">
+        <h2>Frameworks</h2>
+        <div class="project">
+            <h3><strong>RestAssured Framework</strong></h3>
+
+            <p>This framework is created to simplify the process to test API Use Case by using Rest Assured Libraries.
+            </p>
+            <p>This framework can be utilized by cloning the repo url and just changing the Endopints and Payload of the
+                services under test </p>
+            <p><i>Technology Used :</i> Java , Rest Assured , Maven ,Cucumber</p>
+            <p></p>
+            <p>Github Url : https://github.com/contactkrvineet/restAssuredFramework
 
             </p>
-            <p> <button class="read-more-button" onclick="window.location.href='restAssured.html'">Read
+            <p> <button class="read-more-button" onclick="window.location.href='restAssured.html'">Learn
                     More</button></p>
 
         </div>
@@ -68,7 +87,7 @@
                     More</button></p>
         </div>
         <div class="project">
-            <h3>Shopping Cart</h3>
+            <h3>Shopping Cart Framework</h3>
             <p>This framework is created for any one who want to create a small shopping cart Framework </p>
             <p>Comming Soon -Development in progress</p>
             <p><i>Technology Used :</i>React , JavaScript ,Node.js . Express , Axios</p>
@@ -76,7 +95,7 @@
                     More</button></p>
         </div>
         <div class="project">
-            <h3>Mobile Framework </h3>
+            <h3>Mobile Framework Android</h3>
             <p>This framework is created for any one who want to create Mobile Framework </p>
             <p><i>Technology Used :</i>Selenium , Java , Appium , Xcode </p>
             <p> <button class="read-more-button" onclick="window.location.href='blog.html'">Read
