--- a/restAssured.html
+++ b/restAssured.html
@@ -27,7 +27,21 @@
     </header>
 
 
+    <section>
+        <div>
+            <h2>Rest Assured Framework Architecture and Steps :</h2>
+            <p><u>Test framework Setup and Execution Steps :</u></p>
+            <p>Technology Stack : Maven , Java , Cucumber , Rest Assured , Junit </p>
+            <p>Step 1 : Clone the Repo , copy the URL from Home Page </p>
+            <p>Step 2 : Import the file and run Maven clean install to download all the dependencies</p>
+            <p>Step 3 :Change the End point URL under test in the feature file </p>
+            <p>Step 4: Change the Payload under Json File folder and paste your payload</p>
+            <p>Steps 5 : Navigate to runner Tab and change the tag name from feature file to the tag under test</p>
+            <p>Step 6: Execute through Runner - run as Junit test</p>
+            <p>Step 7: View the result in Test Folder </p>
 
+        </div>
+    </section>
 
 
     <footer>
