--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="techExpertise.html">Technical Expertise</a></li>
+                <li><a href="techExpertise.html">Expertise</a></li>
                 <li><a href="#certifications">Certifications</a></li>
             </ul>
         </nav>
@@ -53,7 +53,7 @@
 
 
     <footer>
-        <p>&copy; 2024 Vineet Kumar</p>
+        <p>&copy; 2026 Vineet Kumar</p>
         <div class="social-links">
             <a href="https://www.facebook.com/contactvineet/" target="_blank">Facebook</a>
             <a href="https://www.linkedin.com/in/vineet2311/" target="_blank">LinkedIn</a>
