--- a/index.html
+++ b/index.html
@@ -4,51 +4,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Vineet Kumar — QE Manager & Full‑Stack SDET Architect. 16 years of quality innovation in automation, CI/CD and AI evaluation.">
+    <link rel="canonical" href="https://your-domain.com/">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="SDET, QE Manager, Test Automation, CI/CD, AI Evaluation, Selenium, RestAssured">
+
+    <!-- Open Graph / Social -->
+    <meta property="og:title" content="Vineet Kumar — QE Manager & SDET Architect">
+    <meta property="og:description" content="Leading high-performing teams in automation, CI/CD, and AI model evaluation.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://vineetkr.com/">
+    <meta property="og:image" content="https://vineetkr.com/assets/og-image.png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Vineet Kumar — QE Manager & SDET Architect">
+    <meta name="twitter:description" content="Leading high-performing teams in automation, CI/CD, and AI model evaluation.">
+    <meta name="twitter:image" content="https://your-domain.com/assets/og-image.png">
+
     <title>Technology Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<!-- JSON-LD structured data: Organization / Person -->
+<script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Vineet Kumar",
+        "url": "https://your-domain.com/",
+        "sameAs": [
+            "https://www.linkedin.com/in/vineet2311/",
+            "https://github.com/contactkrvineet",
+            "https://www.facebook.com/contactvineet/"
+        ],
+        "jobTitle": "QE Manager & Full-Stack SDET Architect",
+        "description": "Leading high-performing teams in automation, CI/CD, and AI model evaluation.",
+        "email": "mailto:contactkrvineet@gmail.com"
+    }
+</script>
 
 <body>
     <header>
 
         <h1>Vineet Kumar</h1>
+        <span>contactkrvineet@gmail.com</span><br><br>
+
         <div class="contact-info">
-            <span>Full Stack SDET (QE Manager)</span><br>
-            <span>contactkrvineet@gmail.com</span><br>
+            <span><b>QE Manager & Full-Stack SDET Architect</b>  | <b>AI Evaluation Specialist</b>  |  <b>16 Years of Quality Innovation</b></span><br>
+            <span></span><br>
+            <span></span><br>
+            <span></span>
+            <div class="contact-summary">
+                <span class="lead">Leading high-performing teams in Python/Java automation, CI/CD, and AI Model Evaluation. Expert in scaling Web/Mobile quality and driving strategic Functional/Non-Functional testing across the SDLC.</span>
+                <p><a href="about.html#about" class="more-link" aria-label="Read full professional summary on About Me page" target="_self">Click here to read more about me</a></p>
+            </div>
         </div>
 
         <div class="button-container">
 
-            <button class="blog-button" onclick="location.href='blog.html'">Blogs</button>
+            <button class="button-design" onclick="location.href='work.html'">View My Work</button>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
+                    <li><a href="about.html#expertise">Expertise</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <button class="blog-button" onclick="location.href='book.html'">Books</button>
+            <button class="button-design" onclick="location.href='speaking.html'">Speaking</button>
         </div>
 
 
 
     </header>
 
+    <section id="knowledge-sharing" class="info-section" aria-labelledby="ks-heading">
+        <div class="container">
+            <h2 id="ks-heading">Knowledge sharing</h2>
 
-    <section id="">
-        <div>
+            <p class="lead"><i><strong>Knowledge becomes truly powerful when we share what we know. Shared knowledge multiplies the power it holds.</strong></i></p>
 
-            <p><i><strong>Knowledge becomes truly powerful when we share what we know. Shared knowledge multiplies the
-                        power it
-                        holds.</strong></i> </p>
-            <p>Below, I'm sharing some of the libraries I've created, aiming to contribute
-                to and strengthen the
-                SDET community. If they prove helpful in any way, it would be my pleasure .</p>
-            <p><a href="contact.html" style="color:white"><strong>Click Here and Scan</strong></a> to contribute to
-                Existing Libraries .
+            <p>Below I'm sharing libraries and example projects to help the SDET community learn practical automation, CI/CD and AI-evaluation patterns.</p>
+
+            <ul class="ks-list">
+                <li><strong>Purpose:</strong> Demonstrate reusable patterns that improve test quality and delivery speed.</li>
+                <li><strong>How to use:</strong> Clone or fork the repos, adapt examples, and apply patterns in your projects.</li>
+                <li><strong>Contribute:</strong> Found an improvement? Open a PR or contact me — contributions help everyone.</li>
+            </ul>
+
+            <p class="cta">
+                <a href="#projects" class="info-link" aria-label="View projects">View projects</a>
+                <a href="contact.html" class="info-link info-link--alt" aria-label="Contact to contribute">Contribute / Contact</a>
             </p>
-
         </div>
     </section>
 
@@ -114,7 +162,7 @@
 
 
     <footer>
-        <p>&copy; 2024 Vineet Kumar</p>
+        <p>&copy; 2026 Vineet Kumar</p>
         <div class="social-links">
             <a href="https://www.facebook.com/contactvineet/" target="_blank">Facebook</a>
             <a href="https://www.linkedin.com/in/vineet2311/" target="_blank">LinkedIn</a>
