--- a/about.html
+++ b/about.html
@@ -29,116 +29,171 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p> Hello! I am Vineet, over 14 years of experience as a Software Development Engineer in Test (SDET) Manager
-            with a proven track record of delivering high-quality software products. My career has been defined by a
-            commitment to excellence, a passion for innovative solutions, and a relentless drive to optimize the
-            software development lifecycle.Throughout my career, I have successfully managed multiple projects, from
-            inception to delivery, by employing agile methodologies and continuous integration/continuous deployment
-            (CI/CD) practices. My ability to streamline testing processes and implement cutting-edge technologies has
-            consistently resulted in reduced time-to-market and enhanced product quality.</p>
+        <p>Hello! I am Vineet Kumar, an SDET Manager with over 16 years of experience driving quality engineering and automation across finance, healthcare, e‑commerce, and enterprise products. I architect and deliver scalable test frameworks, CI/CD-integrated pipelines, and performance and reliability strategies that reduce time-to-market and improve product stability.</p>
+
+        <p>I combine hands-on engineering with people and process leadership: hiring and mentoring teams, defining QA strategy and quality gates, and embedding shift-left practices across the delivery lifecycle. I also apply AI\/ML to testing—building model evaluation suites, synthetic test data pipelines, and observability—to accelerate delivery, detect regressions earlier, and improve decision-making.</p>
+
+        <p><b>Core strengths:</b> Automation Architecture, Test Data Engineering, Performance Testing, CI/CD optimization, Cloud-Native Testing, AI Model Evaluation and Modern Quality Engineering Practices.</p>
+
         <p></p>
-        <p> As an SDET Manager, I have successfully led multiple projects from scratch across diverse domains,
-            including finance,healthcare, e-commerce, and enterprise applications.</p>
 
-        <p>Some of my Roles and Responsibiliies includes : </p>
-        <ul>
-            <li>Leading and mentoring a team of talented SDETs and QA engineers.</li>
-            <li>Architecting and implementing scalable test automation frameworks.</li>
-            <li>Collaborating with cross-functional teams to integrate testing into the CI/CD pipeline.</li>
-            <li>Conducting code reviews and providing technical guidance to ensure best practices.</li>
-            <li>Driving the adoption of new tools and technologies to enhance testing efficiency.</li>
-            <li>Identifying and mitigating risks throughout the software development lifecycle.</li>
-        </ul>
 
-        <p>Scroll below to look at my technical Expertise .</p>
+        <p><b>Some of my Roles and Responsibilities includes :</b> </p>
+
+        <!-- html -->
+        <div class="roles-grid">
+            <div class="role-column">
+                <h3>SDET Lead</h3>
+                <ul class="roles-list">
+                    <li>Build and maintain scalable automation frameworks (unit, API, E2E) and reusable libraries.</li>
+                    <li>Design and implement test harnesses for model validation and reliability tests.</li>
+                    <li>Create test data pipelines and synthetic data generation with privacy-safe data.</li>
+                    <li>Develop performance, load, and reliability tests; analyze bottlenecks and remediation.</li>
+                    <li>Integrate and optimize tests in CI/CD with parallelization and flaky-test mitigation.</li>
+                    <li>Define QA strategy, quality gates, release criteria, and risk-based policies.</li>
+                    <li>Own QE roadmap, hiring, capacity planning, and tooling budget.</li>
+                    <li>Track quality metrics (escape rate, MTTR, flakiness, coverage) and report to stakeholders.</li>
+                    <li>Drive shift-left practices and cross-team alignment with product and infra.</li>
+                    <li>Recruit, coach, and develop QA career paths; run postmortems and CI improvements.</li>
+                    <li>Design automated AI evaluation suites: prompt/behavioral tests, regression and A/B tests.</li>
+                    <li>Implemented smart test solutions using advanced AI/ML models and modern quality engineering practices to
+                        accelerate delivery and elevate product quality.</li>
+
+                </ul>
+            </div>
+
+        </div>
+
     </section>
 
+    <!-- html -->
     <section id="expertise">
         <h2>My Technical Expertise</h2>
         <table>
+            <thead>
             <tr>
-                <th style="height:70%">
-                    <p style="color:black">Category</p>
-                </th>
-                <th style="height:70%">
-                    <p style="color:black">Technologies</p>
-                </th>
-
+                <th>Category</th>
+                <th>Technologies</th>
+                <th>Relevance</th>
             </tr>
+            </thead>
+            <tbody>
             <tr>
                 <td>Languages</td>
-                <td>Java, JavaScript</td>
+                <td>Python, Java, JavaScript</td>
+                <td><b>Python:</b> scripting, test tooling and Pytest; <b>Java:</b> Selenium/TestNG frameworks; <b>JavaScript:</b> Playwright/Cypress automation</td>
             </tr>
             <tr>
                 <td>Automation Tools</td>
-                <td>Selenium, Appium, Cucumber, TestNG, JUnit, Rest Assured , Postman ,Swagger</td>
+                <td>Pytest, Selenium, Playwright, Appium, Cucumber, TestNG, JUnit, Rest Assured, Postman, Swagger</td>
+                <td>Web/mobile automation, BDD, API testing, contract validation and Python-native test frameworks</td>
             </tr>
             <tr>
                 <td>Performance Tools</td>
-                <td>Gatlin, Jmeter</td>
+                <td>Gatling, JMeter</td>
+                <td>Load, stress and throughput testing; bottleneck analysis and tuning</td>
             </tr>
             <tr>
-                <td>Data Warehouse Tools</td>
-                <td>Snowflake, MongoDb</td>
+                <td>Data & DataStores</td>
+                <td>Snowflake, MongoDB</td>
+                <td>Test data storage, analytics, dataset preparation and masking</td>
             </tr>
             <tr>
-                <td>CI/CD</td>
+                <td>CI/CD & DevOps</td>
                 <td>Jenkins, Git, Docker, Kubernetes</td>
+                <td>Pipeline automation, containerized test runs, environment orchestration</td>
+            </tr>
+            <tr>
+                <td>Build Tools</td>
+                <td>Maven, Gradle, Python Build (pip, setuptools, poetry)</td>
+                <td>Java and Python build/dependency management and CI integration; reproducible Python packaging</td>
             </tr>
             <tr>
                 <td>Cloud Platforms</td>
                 <td>AWS, Azure</td>
+                <td>Cloud-based test environments, scaling and cost optimisation</td>
+            </tr>
+            <tr>
+                <td>AI Tools</td>
+                <td>Ollama</td>
+                <td>Local LLM runtime for smart test generation, model evaluation, prompt-driven test oracles and CI evaluation</td>
             </tr>
             <tr>
                 <td>Testing Techniques</td>
                 <td>Functional, Regression, Performance, Load, Security</td>
+                <td>Core QA methods used across projects and release gates</td>
             </tr>
             <tr>
                 <td>Development Methodologies</td>
                 <td>Agile, Scrum</td>
+                <td>Iterative delivery, sprint-based testing and collaboration</td>
             </tr>
             <tr>
-                <td>CRM</td>
+                <td>CRM & Integrations</td>
                 <td>Salesforce</td>
+                <td>CRM workflows, integration and end-to-end testing</td>
             </tr>
-            <tr>
-                <td>Build Tools</td>
-                <td>Maven, Gradle</td>
-            </tr>
+            </tbody>
         </table>
     </section>
-    <section id="expertise">
-        <h2>Currently Learning Technologies</h2>
-        <table>
-            <tr>
-                <th>
-                    <p style="color:black">Category</p>
-                </th>
-                <th>
-                    <p style="color:black">Technologies</p>
-                </th>
-
-            </tr>
-            <tr>
-                <td>Languages</td>
-                <td>Python , React JS</td>
-            </tr>
-            <tr>
-                <td>Automation Tools</td>
-                <td>Cypress</td>
-            </tr>
-
-            <tr>
-                <td>AI</td>
-                <td>Generative AI Prompt</td>
-            </tr>
 
 
-        </table>
 
+    <!-- HTML: paste into `about.html` (e.g., after the LearningTech section) -->
+    <section id="certifications">
+        <h2>Certifications</h2>
+        <div class="table-wrap">
+            <table>
+                <thead>
+                <tr>
+                    <th>Certification</th>
+                    <th>Issuer</th>
+                    <th>Certification No</th>
+                    <th>Year</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Python PCEP</td>
+                    <td>Python Institute</td>
+                    <td>vKA3.aXB6.6HcW</td>
+                    <td>2025</td>
+                </tr>
+                <tr>
+                    <td>SAFe6 Product Owner/Manager</td>
+                    <td>SAFE</td>
+                    <td>90458158-9868</td>
+                    <td>2024</td>
+                </tr>
+                <tr>
+                    <td>AWS Certified Cloud Practioner</td>
+                    <td>AWS</td>
+                    <td>D348RLDBG21Q1N5S</td>
+                    <td>2023</td>
+                </tr>
+                <tr>
+                    <td>Microsoft Certified Azure Fundamentals</td>
+                    <td>Microsoft</td>
+                    <td>H960-1697</td>
+                    <td>2023</td>
+                </tr>
+                <tr>
+                    <td>ISTQB</td>
+                    <td>ISTQB</td>
+                    <td></td>
+                    <td>2021</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </section>
+
+    <!-- CSS: append to `styles.css` -->
+
+
+
     <footer>
-        <p>&copy; 2024 Vineet Kumar</p>
+        <p>&copy; 2026 Vineet Kumar</p>
         <div class="social-links">
             <a href="https://www.facebook.com/contactvineet/" target="_blank">Facebook</a>
             <a href="https://www.linkedin.com/in/vineet2311/" target="_blank">LinkedIn</a>
