--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <button class="button-design" onclick="location.href='speaking.html'">Speaking</button>
+            <button class="button-design" onclick="location.href='Blog.html'">Blog</button>
         </div>
 
 
