--- a/index.html
+++ b/index.html
@@ -101,7 +101,39 @@
     </section>
 
     <section id="projects">
-        <h2>Frameworks</h2>
+        <h2 id="projects-heading">Automation Projects & Frameworks</h2>
+
+        <div class="project">
+            <!-- Replace the existing heading line in `index.html` with this -->
+            <h3 class="project-title">Playwright BDD Framework <span class="tag">Playwright • BDD</span></h3>
+
+            <p>
+                A comprehensive test automation framework combining Playwright with BDD (Cucumber) and multiple reporting options including Allure,
+                Cucumber HTML reports, and native Playwright reports.
+            </p>
+            <p>
+                <a href="https://contactkrvineet.github.io/playwright-bdd-framework/" class="info-link" target="_blank" rel="noopener noreferrer" aria-label="View sample live report">View Sample Live Report</a>
+            </p>
+            <p>
+                <a href="https://github.com/contactkrvineet/playwright-bdd-framework" class="info-link" target="_blank" rel="noopener noreferrer" aria-label="View Projects">View Project</a>
+            </p>
+            <ul>
+                <li>Dual Test Approach: Run tests via Playwright or BDD Cucumber</li>
+                <li>Multiple Reports: Allure, Cucumber HTML, Bootstrap, JSON, JUnit</li>
+                <li>Screenshot on Failure: Automatic screenshot capture for failed tests</li>
+                <li>Parallel Execution: Support for parallel test execution</li>
+                <li>Headed/Headless Mode: Configurable browser modes</li>
+                <li>CI/CD Ready: GitHub Actions integration included</li>
+                <li>Multi-Browser Support: Chrome, Firefox, Safari (WebKit)</li>
+            </ul>
+
+            <p class="note">
+                Quick start: add the Gatling Maven plugin, place simulations in <code>src/gatling/simulations</code>, provide feeders in <code>src/gatling/resources</code>, then run <code>mvn gatling:test</code>.
+            </p>
+            <p><i>Technology Used :</i> Java , Gradle . BDD ,TestNg, Gatling</p>
+            <p> <button class="read-more-button" onclick="window.location.href='performance.html'">Read
+                More</button></p>
+        </div>
         <div class="project">
             <h3>Gatling Performance Framework</h3>
             <p>
